# pdnew

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
pdnew/: main.cpp
pdnew.xcodeproj/: project.pbxproj
pdnew.xcodeproj/xcuserdata/yevgeniyzakharov.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Misc.cpp  Misc.hpp  main.cpp
src/Data/: BuiltInContent.cpp
src/DataModel/: ArgumentOptionStringRepresentation.cpp  ArgumentOptionStringRepresentation.hpp  Folder.cpp  Folder.hpp  ProjectProgrammingLanguage.cpp  ProjectProgrammingLanguage.hpp
src/Services/: ArgumentsParser.cpp  ArgumentsParser.hpp  FileTreeCreator.cpp  FileTreeCreator.hpp  ProjectCreator.cpp  ProjectCreator.hpp
src/pdnew/: PdNewApp.cpp  PdNewApp.hpp
src/pdnew/DataModel/: ArgumentOption.cpp  ArgumentOption.hpp  ArgumentsConfiguration.cpp  ArgumentsConfiguration.hpp  ArgumentsParseResult.cpp  ArgumentsParseResult.hpp  ArgumentsParserError.cpp  ArgumentsParserError.hpp  File.cpp  File.hpp  ProjectProgrammingLanguage.cpp  ProjectProgrammingLanguage.hpp
src/pdnew/Services/: ArgumentsParser.cpp  ArgumentsParser.hpp  ProjectCreator.cpp  ProjectCreator.hpp  UsagePrinter.cpp  UsagePrinter.hpp
tests/: ArgumentOptionStringRepresentation+operator==.cpp  ArgumentOptionTests.cpp  ArgumentsParserTests.cpp  ProjectProgrammingLanguageTests.cpp
tests/extensions/: ArgumentOptionStringRepresentation+operator==.hpp  ArgumentsConfiguration+operator==.cpp  ArgumentsConfiguration+operator==.hpp  ArgumentsParserError+Operator==.cpp  ArgumentsParserError+Operator==.hpp
